RESOLVED FIXED181936
REGRESSION(r224535): Can't write reviews in the App Store
https://bugs.webkit.org/show_bug.cgi?id=181936
Summary REGRESSION(r224535): Can't write reviews in the App Store
Antti Koivisto
Reported 2018-01-22 09:14:13 PST
UITextContentView is zero sized.
Attachments
patch (1.71 KB, patch)
2018-01-22 09:21 PST, Antti Koivisto
no flags
patch (6.52 KB, patch)
2018-01-22 09:41 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2018-01-22 09:14:32 PST
Antti Koivisto
Comment 2 2018-01-22 09:21:56 PST
Antti Koivisto
Comment 3 2018-01-22 09:41:31 PST
WebKit Commit Bot
Comment 4 2018-01-22 10:48:47 PST
Comment on attachment 331935 [details] patch Clearing flags on attachment: 331935 Committed r227343: <https://trac.webkit.org/changeset/227343>
WebKit Commit Bot
Comment 5 2018-01-22 10:48:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.