REGRESSION(r224535): Can't write reviews in the App Store https://bugs.webkit.org/show_bug.cgi?id=181936 <rdar://problem/36670246>

Reviewed by Zalan Bujtas.

* page/LayoutContext.cpp:
(WebCore::LayoutContext::updateStyleForLayout):

r224535 was about media queries but it also removed a seemingly spurious call to SyleScope::didChangeStyleSheetEnvironment
from the path that does not involve media queries.
Turns out UITextContentView somehow depended on it, so revert this specific change.


Canonical link: https://commits.webkit.org/197771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227343 268f45cc-cd09-0410-ab3c-d52691b4dbfc